Add belike img styles

--- a/frontend/src/views/Home/Home.scss
+++ b/frontend/src/views/Home/Home.scss
@@ -17,4 +17,10 @@
       margin: 1rem;
     }
   }
+  img{
+    display: flex;
+    margin: 0 auto;
+    width: 20rem;
+    border-radius: 5rem;
+  }
 }
